--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1",
     "socket.io": "^4.7.0"
   },
   "devDependencies": {
