--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "jwt-decode": "^3.1.2",
+    "peer": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-social-login-buttons": "^3.9.1",
+    "reactjs-social-login": "^2.6.2",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
