--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.30.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
