--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://forumstudy-server.onrender.com",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -17,6 +17,8 @@
     "bootstrap": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "peer": "^1.0.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^1.14.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
